Remove float to prevent unintended auto-alignment

--- a/app/assets/stylesheets/pages/settings_ci_cd.scss
+++ b/app/assets/stylesheets/pages/settings_ci_cd.scss
@@ -7,7 +7,6 @@
 
 .trigger-actions {
   .btn {
-    float: left;
     margin-left: 10px;
   }
 }
